# new_fast_api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml
api/: db.py  get_secret_key.py  main.py  migrate_db.py
api/cruds/: done.py  task.py
api/routers/: done.py  task.py
api/schemas/: task.py
scripts/: check.sh  fix.sh
tests/: test.py
