[tool.black]
line-length=120

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true
skip = [".venv/", ".dockervenv/"]

[tool.mypy]
install_types = true
non_interactive = true


[tool.ruff]
line-length = 120

[tool.poetry]
name = "new-fast-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.8.2"
uvicorn = "^0.30.1"
mypy = "1.9.0"
black = "24.3.0"
ruff = "0.3.4"
isort = "5.13.2"
flake8 = "7.1.0"
boto3 = "^1.34.144"
botocore = "^1.34.144"
boto3-stubs = "^1.34.144"
botocore-stubs = "^1.34.144"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
